@@ -33,6 +33,7 @@ python-reahl (3.2.0) unstable; urgency=low
  * Changed the for= attribute on an Input's Label to refer to the Input control css_id.
  * Changed the way tables are filled with data: use with_data() instead of from_columns().
  * Changed QueryAsSequence to deal properly with mapped items and slicing.
+ * Added support for del_ methods on Fixtures to tear down singleton instances created with corresponding new_ methods.
 
  -- Iwan Vosloo <iwan@reahl.org>  Thu, 13 Aug 2015 14:56:00 +0200
 
